# WryKun-Web-Server

./: CMakeLists.txt  LICENSE  Makefile  README.md
include/: config.h  http.h  php.h  server.h  wtp.h  wwl.h
src/: config.cpp  http.cpp  main.cpp  php.cpp  server.cpp  wtp.cpp  wwl.cpp
test/speedRequests/: index.html  main.cpp  speedRequests
test/wl/: main.cpp  main.wl  wl
